<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/fragment_holder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:background="@color/action_background">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="8"
            android:background="@drawable/logo_grey" />

        <LinearLayout
            android:id="@+id/mainActionSet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/weather"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="8"
                android:background="@drawable/weather" />

            <ImageView
                android:id="@+id/news"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="8"
                android:background="@drawable/news" />

            <ImageView
                android:id="@+id/menu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="8"
                android:background="@drawable/menu" />

            <ImageView
                android:id="@+id/recreation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="8"
                android:background="@drawable/recreation" />



            <ImageView
                android:id="@+id/promo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="8"
                android:background="@drawable/promo" />

            <ImageView
                android:id="@+id/bulletin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="8"
                android:background="@drawable/bulletin" />

            <ImageView
                android:id="@+id/gallery"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="8"
                android:background="@drawable/gallery" />

            <ImageView
                android:id="@+id/camera"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="8"
                android:background="@drawable/camera" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/secondActionSet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="gone">

            <ImageView
                android:id="@+id/read"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="8"
                android:background="@drawable/read" />

            <ImageView
                android:id="@+id/music"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="8"
                android:background="@drawable/music" />

            <ImageView
                android:id="@+id/movies"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="8"
                android:background="@drawable/movies" />

            <ImageView
                android:id="@+id/calendar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="8"
                android:background="@drawable/calendar" />

            <ImageView
                android:id="@+id/chat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="8"
                android:background="@drawable/chat" />

            <ImageView
                android:id="@+id/games"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="8"
                android:background="@drawable/games" />

            <ImageView
                android:id="@+id/nurse"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="8"
                android:background="@drawable/nurse" />

            <ImageView
                android:id="@+id/info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="8"
                android:background="@drawable/info" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
